Updated links for images to allow easier hosting elsewhere.

--- a/rl/on_policy_vs_off_policy.ipynb
+++ b/rl/on_policy_vs_off_policy.ipynb
@@ -17,11 +17,11 @@
     "\n",
     "SARSA:\n",
     "\n",
-    "![SARSA](img/on-policy-sarsa.png)\n",
+    "![SARSA](https://github.com/khaiyichin/teach_learn_notes/raw/main/rl/img/on-policy-sarsa.png)\n",
     "\n",
     "Q-learning:\n",
     "\n",
-    "![Q-learning](img/on-policy-q-learning.png)\n",
+    "![Q-learning](https://github.com/khaiyichin/teach_learn_notes/raw/main/rl/img/on-policy-q-learning.png)\n",
     "\n",
     "The following table show the difference between SARSA and Q-learning:\n",
     "\n",
