--- a/math/infimum_supremum.ipynb
+++ b/math/infimum_supremum.ipynb
@@ -14,7 +14,7 @@
     "\\begin{equation*}\n",
     "    y \\leq x \\qquad \\forall s \\in S, \\ S \\subseteq P\n",
     "\\end{equation*}\n",
-    "then $a$ is the infimum of $S$ if $y \\leq a$ ($a$ is greater than or equal to any other lower bound.\n",
+    "then $a$ is the infimum of $S$ if $y \\leq a$ ($a$ is greater than or equal to any other lower bound).\n",
     "\n",
     "The term **greatest lower bound** is also commonly used to describe the infimum.\n",
     "\n",
@@ -25,9 +25,9 @@
     "\\begin{equation*}\n",
     "    z \\geq x \\qquad \\forall s \\in S, \\ S \\subseteq P\n",
     "\\end{equation*}\n",
-    "then $b$ is the infimum of $S$ if $z \\leq b$ ($b$ is less than or equal to any other upper bound.\n",
+    "then $b$ is the infimum of $S$ if $z \\leq b$ ($b$ is less than or equal to any other upper bound).\n",
     "\n",
-    "The term **greatest lower bound** is also commonly used to describe the infimum.\n",
+    "The term **least upper bound** is also commonly used to describe the supremum.\n",
     "\n",
     "## Remarks\n",
     "The concepts of infimum and supremum are similar to minimum and maximum, but are more useful in analysis because they better characterize special sets which may have no minimum or maximum. For instance, the set of positive real numbers $\\mathbb{R}^{+}$ (not including $0$) does not have a minimum, because any given element of $\\mathbb{R}^{+}$ could simply be divided in half resulting in a smaller number that is still in $\\mathbb {R} ^{+}$. There is, however, exactly one infimum of the positive real numbers: $0$, which is smaller than all the positive real numbers and greater than any other real number which could be used as a lower bound.\n",
