--- a/ml_dl/pytorch_nn_tutorial.ipynb
+++ b/ml_dl/pytorch_nn_tutorial.ipynb
@@ -2,6 +2,19 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "view-in-github"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/gist/khaiyichin/21f114d7f06027eabaaa407c5e942174/test.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u2BThsV_Ew9T"
+      },
       "source": [
         "# Neural network tutorial with PyTorch\n",
         "This brief tutorial provides instruction on how to:\n",
@@ -18,14 +31,11 @@
         "The materials here are adapted from a tutorial provided by the WPI DS595: Reinforcement Learning class on using PyTorch.\n",
         "\n",
         "Reference on saving/loading models: https://debuggercafe.com/effective-model-saving-and-resuming-training-in-pytorch/"
-      ],
-      "metadata": {
-        "id": "u2BThsV_Ew9T"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "PtFG6osUcMUV"
@@ -59,16 +69,16 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Download the CIFAR 10 data:"
-      ],
       "metadata": {
         "id": "GvNP6tVDJYF6"
-      }
+      },
+      "source": [
+        "Download the CIFAR 10 data:"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -78,8 +88,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Files already downloaded and verified\n",
             "original dtype: <class 'numpy.ndarray'>\n",
@@ -103,28 +113,28 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Example on how to create a minibatch:"
-      ],
       "metadata": {
         "id": "7KIpJAryJSCT"
-      }
+      },
+      "source": [
+        "Example on how to create a minibatch:"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "metadata": {
-        "collapsed": true,
-        "id": "_qOeuMa_cMUg",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
+        "id": "_qOeuMa_cMUg",
         "outputId": "9fc98cc6-397e-4b86-b7c6-bdba4b0ba570"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "torch.Size([32, 3, 32, 32])\n",
             "torch.float64\n"
@@ -154,20 +164,20 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "MZABkTknE1Cf"
+      },
       "source": [
         "We define our desired neural network architecture as a class that inherits from `nn.Module`; this is so that core PyTorch neural network methods are available to us.\n",
         "\n",
         "In the `__init__` function the parent methods and attributes are inherited first before the definition of desired neural network blocks.\n",
         "\n",
         "In the `forward` method, the network structure is set up based on the defined blocks in `__init__`. This is the method that executes forward propagation in the network."
-      ],
-      "metadata": {
-        "id": "MZABkTknE1Cf"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "c9dx-W7kcMUo"
@@ -236,28 +246,28 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Show that the GPU device is available:"
-      ],
       "metadata": {
         "id": "U9JCwpaPJ35K"
-      }
+      },
+      "source": [
+        "Show that the GPU device is available:"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "metadata": {
-        "scrolled": true,
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cpnyBCBkcMUv",
-        "outputId": "3c62aa7b-dc29-4ca7-858b-9ba42642f510"
+        "outputId": "3c62aa7b-dc29-4ca7-858b-9ba42642f510",
+        "scrolled": true
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "cuda:0\n"
           ]
@@ -272,16 +282,16 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Train the network on the CIFAR10 dataset for 1 epoch using the GPU, then save the trained model:"
-      ],
       "metadata": {
         "id": "RyJGe_U8KDln"
-      }
+      },
+      "source": [
+        "Train the network on the CIFAR10 dataset for 1 epoch using the GPU, then save the trained model:"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -291,8 +301,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Training with GPU\n",
             "[1,  2000] loss: 2.191\n",
@@ -359,15 +369,39 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Step 4. Load model to train on CPU, then save it."
-      ],
       "metadata": {
         "id": "UNPleRMAXQ-d"
-      }
+      },
+      "source": [
+        "### Step 4. Load model to train on CPU, then save it."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5acZAReGQB6_",
+        "outputId": "c5cce5eb-4ea0-4b5b-e788-238d43aadefc"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Training with CPU\n",
+            "[1,  2000] loss: 1.386\n",
+            "[1,  4000] loss: 1.365\n",
+            "[1,  6000] loss: 1.359\n",
+            "[1,  8000] loss: 1.321\n",
+            "[1, 10000] loss: 1.289\n",
+            "[1, 12000] loss: 1.290\n",
+            "Finished Training in 61.85360124400006 s\n"
+          ]
+        }
+      ],
       "source": [
         "# Load model to train with CPU\n",
         "print(\"Training with CPU for the 2nd epoch\")\n",
@@ -426,43 +460,43 @@
         "            'optimizer_state_dict': cpu_optimizer.state_dict(),\n",
         "            'loss': cpu_criterion,\n",
         "            }, PATH_2)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "5acZAReGQB6_",
-        "outputId": "c5cce5eb-4ea0-4b5b-e788-238d43aadefc"
-      },
-      "execution_count": 69,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training with CPU\n",
-            "[1,  2000] loss: 1.386\n",
-            "[1,  4000] loss: 1.365\n",
-            "[1,  6000] loss: 1.359\n",
-            "[1,  8000] loss: 1.321\n",
-            "[1, 10000] loss: 1.289\n",
-            "[1, 12000] loss: 1.290\n",
-            "Finished Training in 61.85360124400006 s\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Step 5. Load model to train on GPU for the 3rd and final epoch."
-      ],
       "metadata": {
         "id": "ASJeX-tRK-7f"
-      }
+      },
+      "source": [
+        "### Step 5. Load model to train on GPU for the 3rd and final epoch."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KPsjCEVPLhRP",
+        "outputId": "82249877-92cd-4838-f824-54fa4e6a51b7"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Training with GPU\n",
+            "[1,  2000] loss: 1.226\n",
+            "[1,  4000] loss: 1.214\n",
+            "[1,  6000] loss: 1.223\n",
+            "[1,  8000] loss: 1.210\n",
+            "[1, 10000] loss: 1.210\n",
+            "[1, 12000] loss: 1.179\n",
+            "Finished Training in 70.29780777899998 s\n"
+          ]
+        }
+      ],
       "source": [
         "# Load model to train with CPU\n",
         "print(\"Training with GPU for the 3rd epoch\")\n",
@@ -512,34 +546,17 @@
         "            running_loss = 0.0\n",
         "\n",
         "print('Finished Training in ' + str(time.process_time() - t) + ' s')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KPsjCEVPLhRP",
-        "outputId": "82249877-92cd-4838-f824-54fa4e6a51b7"
-      },
-      "execution_count": 70,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training with GPU\n",
-            "[1,  2000] loss: 1.226\n",
-            "[1,  4000] loss: 1.214\n",
-            "[1,  6000] loss: 1.223\n",
-            "[1,  8000] loss: 1.210\n",
-            "[1, 10000] loss: 1.210\n",
-            "[1, 12000] loss: 1.179\n",
-            "Finished Training in 70.29780777899998 s\n"
-          ]
-        }
       ]
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "pytorch_nn_tutorial.ipynb",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -556,14 +573,7 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.8.10"
-    },
-    "colab": {
-      "name": "test.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
