--- a/ml_dl/pytorch_nn_tutorial.ipynb
+++ b/ml_dl/pytorch_nn_tutorial.ipynb
@@ -3,18 +3,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/gist/khaiyichin/21f114d7f06027eabaaa407c5e942174/test.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/khaiyichin/teach_learn_notes/blob/main/ml_dl/pytorch_nn_tutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "u2BThsV_Ew9T"
-      },
       "source": [
         "# Neural network tutorial with PyTorch\n",
         "This brief tutorial provides instruction on how to:\n",
@@ -31,7 +28,10 @@
         "The materials here are adapted from a tutorial provided by the WPI DS595: Reinforcement Learning class on using PyTorch.\n",
         "\n",
         "Reference on saving/loading models: https://debuggercafe.com/effective-model-saving-and-resuming-training-in-pytorch/"
-      ]
+      ],
+      "metadata": {
+        "id": "u2BThsV_Ew9T"
+      }
     },
     {
       "cell_type": "code",
@@ -69,12 +69,12 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "GvNP6tVDJYF6"
-      },
       "source": [
         "Download the CIFAR 10 data:"
-      ]
+      ],
+      "metadata": {
+        "id": "GvNP6tVDJYF6"
+      }
     },
     {
       "cell_type": "code",
@@ -88,8 +88,8 @@
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Files already downloaded and verified\n",
             "original dtype: <class 'numpy.ndarray'>\n",
@@ -113,28 +113,28 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "7KIpJAryJSCT"
-      },
       "source": [
         "Example on how to create a minibatch:"
-      ]
+      ],
+      "metadata": {
+        "id": "7KIpJAryJSCT"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "collapsed": true,
+        "id": "_qOeuMa_cMUg",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "collapsed": true,
-        "id": "_qOeuMa_cMUg",
         "outputId": "9fc98cc6-397e-4b86-b7c6-bdba4b0ba570"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "torch.Size([32, 3, 32, 32])\n",
             "torch.float64\n"
@@ -164,16 +164,16 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "MZABkTknE1Cf"
-      },
       "source": [
         "We define our desired neural network architecture as a class that inherits from `nn.Module`; this is so that core PyTorch neural network methods are available to us.\n",
         "\n",
         "In the `__init__` function the parent methods and attributes are inherited first before the definition of desired neural network blocks.\n",
         "\n",
         "In the `forward` method, the network structure is set up based on the defined blocks in `__init__`. This is the method that executes forward propagation in the network."
-      ]
+      ],
+      "metadata": {
+        "id": "MZABkTknE1Cf"
+      }
     },
     {
       "cell_type": "code",
@@ -246,28 +246,28 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "U9JCwpaPJ35K"
-      },
       "source": [
         "Show that the GPU device is available:"
-      ]
+      ],
+      "metadata": {
+        "id": "U9JCwpaPJ35K"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "scrolled": true,
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cpnyBCBkcMUv",
-        "outputId": "3c62aa7b-dc29-4ca7-858b-9ba42642f510",
-        "scrolled": true
+        "outputId": "3c62aa7b-dc29-4ca7-858b-9ba42642f510"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "cuda:0\n"
           ]
@@ -282,12 +282,12 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "RyJGe_U8KDln"
-      },
       "source": [
         "Train the network on the CIFAR10 dataset for 1 epoch using the GPU, then save the trained model:"
-      ]
+      ],
+      "metadata": {
+        "id": "RyJGe_U8KDln"
+      }
     },
     {
       "cell_type": "code",
@@ -301,8 +301,8 @@
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Training with GPU\n",
             "[1,  2000] loss: 2.191\n",
@@ -369,39 +369,15 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "UNPleRMAXQ-d"
-      },
       "source": [
         "### Step 4. Load model to train on CPU, then save it."
-      ]
+      ],
+      "metadata": {
+        "id": "UNPleRMAXQ-d"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "5acZAReGQB6_",
-        "outputId": "c5cce5eb-4ea0-4b5b-e788-238d43aadefc"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Training with CPU\n",
-            "[1,  2000] loss: 1.386\n",
-            "[1,  4000] loss: 1.365\n",
-            "[1,  6000] loss: 1.359\n",
-            "[1,  8000] loss: 1.321\n",
-            "[1, 10000] loss: 1.289\n",
-            "[1, 12000] loss: 1.290\n",
-            "Finished Training in 61.85360124400006 s\n"
-          ]
-        }
-      ],
       "source": [
         "# Load model to train with CPU\n",
         "print(\"Training with CPU for the 2nd epoch\")\n",
@@ -460,43 +436,43 @@
         "            'optimizer_state_dict': cpu_optimizer.state_dict(),\n",
         "            'loss': cpu_criterion,\n",
         "            }, PATH_2)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ASJeX-tRK-7f"
-      },
-      "source": [
-        "### Step 5. Load model to train on GPU for the 3rd and final epoch."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "KPsjCEVPLhRP",
-        "outputId": "82249877-92cd-4838-f824-54fa4e6a51b7"
+        "id": "5acZAReGQB6_",
+        "outputId": "c5cce5eb-4ea0-4b5b-e788-238d43aadefc"
       },
+      "execution_count": null,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Training with GPU\n",
-            "[1,  2000] loss: 1.226\n",
-            "[1,  4000] loss: 1.214\n",
-            "[1,  6000] loss: 1.223\n",
-            "[1,  8000] loss: 1.210\n",
-            "[1, 10000] loss: 1.210\n",
-            "[1, 12000] loss: 1.179\n",
-            "Finished Training in 70.29780777899998 s\n"
+            "Training with CPU\n",
+            "[1,  2000] loss: 1.386\n",
+            "[1,  4000] loss: 1.365\n",
+            "[1,  6000] loss: 1.359\n",
+            "[1,  8000] loss: 1.321\n",
+            "[1, 10000] loss: 1.289\n",
+            "[1, 12000] loss: 1.290\n",
+            "Finished Training in 61.85360124400006 s\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Step 5. Load model to train on GPU for the 3rd and final epoch."
       ],
+      "metadata": {
+        "id": "ASJeX-tRK-7f"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [
         "# Load model to train with CPU\n",
         "print(\"Training with GPU for the 3rd epoch\")\n",
@@ -546,17 +522,34 @@
         "            running_loss = 0.0\n",
         "\n",
         "print('Finished Training in ' + str(time.process_time() - t) + ' s')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KPsjCEVPLhRP",
+        "outputId": "82249877-92cd-4838-f824-54fa4e6a51b7"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training with GPU\n",
+            "[1,  2000] loss: 1.226\n",
+            "[1,  4000] loss: 1.214\n",
+            "[1,  6000] loss: 1.223\n",
+            "[1,  8000] loss: 1.210\n",
+            "[1, 10000] loss: 1.210\n",
+            "[1, 12000] loss: 1.179\n",
+            "Finished Training in 70.29780777899998 s\n"
+          ]
+        }
       ]
     }
   ],
   "metadata": {
-    "accelerator": "GPU",
-    "colab": {
-      "collapsed_sections": [],
-      "include_colab_link": true,
-      "name": "pytorch_nn_tutorial.ipynb",
-      "provenance": []
-    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -573,7 +566,14 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.8.10"
-    }
+    },
+    "colab": {
+      "name": "pytorch_nn_tutorial.ipynb",
+      "provenance": [],
+      "collapsed_sections": [],
+      "include_colab_link": true
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
