Updated image sizes.

--- a/ml_dl/pca.ipynb
+++ b/ml_dl/pca.ipynb
@@ -15,9 +15,9 @@
     "\n",
     "The image below reflects the dilemma that we encounter: empty spaces are introduced as we increase the number of features to train on, indicating the lack of information necessary for the algorithm to make decent predictions. In 1-D we can see that the 4 segments are well populated with data, but the same data in 2-D is less populated in the 4x4 = 16 regions, and are even more sparsely located in 3-D with 4x4x4 = 64 regions.\n",
     "\n",
-    "![](https://images.deepai.org/glossary-terms/curse-of-dimensionality-61461.jpg)\n",
+    "<img src=\"https://aiaspirant.com/wp-content/uploads/2019/09/curse-of-dimensionality.png\" alt=\"Curse of dimensionality\" style=\"height: 400px;\"/>\n",
     "\n",
-    "Image credit: https://deepai.org/machine-learning-glossary-and-terms/curse-of-dimensionality\n",
+    "Image credit: https://aiaspirant.com/curse-of-dimensionality/\n",
     "\n",
     "## Principal component analysis (PCA) - a dimensionality reduction solution\n",
     "### What is it and why is it useful?\n",
@@ -64,7 +64,7 @@
     "\n",
     "The following image shows 2 principal components for the 2-D data:\n",
     "\n",
-    "![](https://miro.medium.com/max/1200/0*J-m5zAEFGOs-qnLo.png)\n",
+    "<img src=\"https://miro.medium.com/max/1200/0*J-m5zAEFGOs-qnLo.png\" alt=\"2-D PCA\" style=\"height: 400px;\"/>\n",
     "\n",
     "Image credit: https://medium.com/xebia-engineering/principal-component-analysis-autoencoder-257e90d08a4e\n",
     "\n",
