Minor update to image description.

--- a/ml_dl/pca.ipynb
+++ b/ml_dl/pca.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "Now, we are faced with a dilemma: the $n$ heights that we collected are well spread out (e.g., uniformly spread between 145cm and 190cm), but if we also include the weights of those subjects, the spread in both height and weight is reduced. That is, only a small number of subjects will have a similar height $H$, which means that the weights at this particular height isn't that well spread out. Consequently, since the algorithm can only learn from what it's given, it makes predictions that are heavily influenced by the handful of weights at each height.\n",
     "\n",
-    "The image below reflects the dilemma that we encounter: empty spaces are introduced as we increase the number of features to train on, indicating the lack of information necessary for the algorithm to make decent predictions. In 1-D we can see that the 4 segments are well populated with data, but the same data in 2-D is less populated in the 4x4 = 16 regions, and are even more sparsely located in 3-D with 4x4x4 = 64 regions.\n",
+    "The image below reflects the dilemma that we encounter: empty spaces are introduced as we increase the number of features to train on, indicating the lack of information necessary for the algorithm to make decent predictions. In 1-D we can see that the $5$ segments (0.0-0.2, 0.2-0.4, ..., 0.8-1.0) are well populated with data, but the same data in 2-D is less populated in the $5^2 = 25$ regions, and are even more sparsely located in 3-D with $5^3 = 125$ regions.\n",
     "\n",
     "<img src=\"https://aiaspirant.com/wp-content/uploads/2019/09/curse-of-dimensionality.png\" alt=\"Curse of dimensionality\" style=\"height: 400px;\"/>\n",
     "\n",
@@ -41,7 +41,7 @@
     "\n",
     "    \\mathbf{d_i} &= (x, y, z)\n",
     "\n",
-    "\\end{align*}    \n",
+    "\\end{align*}\n",
     "in units of height, weight, and width respectively, in 3-D space. PCA then modifies the basis such that the features are combined into a single principal component vector (a new basis vector) that is a combination of the 3 existing axes. Then, instead of $\\mathbf{d_i} = (x, y, z)$, we get a description for a datapoint as follows:\n",
     "\n",
     "\\begin{align*}\n",
