Added complexity discussion to variable elimination notebook.

--- a/stats/variable_elimination_example.ipynb
+++ b/stats/variable_elimination_example.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -272,8 +272,8 @@
     "| --- | --- | --- |\n",
     "| $f_2 \\cdot f_5 = P(R \\mid C=\\text{False}) \\cdot P(W=\\text{True} \\mid R, S=\\text{False})$ | $1 \\cdot 0 = 0$ | $0 \\cdot 1 = 0$ |\n",
     "| $f_2 \\cdot f_5 = P(R \\mid C=\\text{False}) \\cdot P(W=\\text{True} \\mid R, S=\\text{True})$ | $1 \\cdot 1 = 1$ | $0 \\cdot 1 = 0$ |\n",
-    "| $f_2 \\cdot f_5 = P(R \\mid C=\\text{True}) \\cdot P(W=\\text{True} \\mid R, S=\\text{False})$ | $1/2 \\cdot 0 = 0$ | $1/2 \\cdot 1 = 1/2$ |\n",
-    "| $f_2 \\cdot f_5 = P(R \\mid C=\\text{True}) \\cdot P(W=\\text{True} \\mid R, S=\\text{True})$ | $1/2 \\cdot 1 = 1/2$ | $1/2 \\cdot 1 = 1/2$ |\n",
+    "| $f_2 \\cdot f_5 = P(R \\mid C=\\text{True}) \\cdot P(W=\\text{True} \\mid R, S=\\text{False})$ | $\\dfrac{1}{2} \\cdot 0 = 0$ | $\\dfrac{1}{2} \\cdot 1 = \\dfrac{1}{2}$ |\n",
+    "| $f_2 \\cdot f_5 = P(R \\mid C=\\text{True}) \\cdot P(W=\\text{True} \\mid R, S=\\text{True})$ | $\\dfrac{1}{2} \\cdot 1 = \\dfrac{1}{2}$ | $\\dfrac{1}{2} \\cdot 1 = \\dfrac{1}{2}$ |\n",
     "\n",
     "</div>\n",
     "\n",
@@ -284,8 +284,8 @@
     "| --- | --- |\n",
     "| $f_6(C=\\text{False}, R=\\textbf{False}, S=\\text{False}) + f_6(C=\\text{False}, R=\\textbf{True}, S=\\text{False})$ | $0 + 0 = 0$ |\n",
     "| $f_6(C=\\text{False}, R=\\textbf{False}, S=\\text{True}) + f_6(C=\\text{False}, R=\\textbf{True}, S=\\text{True})$ | $1 + 0 = 1$ |\n",
-    "| $f_6(C=\\text{True}, R=\\textbf{False}, S=\\text{False}) + f_6(C=\\text{True}, R=\\textbf{True}, S=\\text{False})$ | $0 + 1/2 = 1/2$ |\n",
-    "| $f_6(C=\\text{True}, R=\\textbf{False}, S=\\text{True}) + f_6(C=\\text{True}, R=\\textbf{True}, S=\\text{True})$ | $1/2 + 1/2 = 1$ |\n",
+    "| $f_6(C=\\text{True}, R=\\textbf{False}, S=\\text{False}) + f_6(C=\\text{True}, R=\\textbf{True}, S=\\text{False})$ | $0 + \\dfrac{1}{2} = \\dfrac{1}{2}$ |\n",
+    "| $f_6(C=\\text{True}, R=\\textbf{False}, S=\\text{True}) + f_6(C=\\text{True}, R=\\textbf{True}, S=\\text{True})$ | $\\dfrac{1}{2} + \\dfrac{1}{2} = 1$ |\n",
     "\n",
     "</div>\n",
     "\n",
@@ -300,8 +300,8 @@
     "\n",
     "| $S$ | False | True |\n",
     "| --- | --- | --- |\n",
-    "| $f_3 \\cdot f_7 = P(S \\mid C=\\text{False}) \\cdot f_7(C=\\text{False}, S)$ | $1/4 \\cdot 0 = 0$ | $3/4 \\cdot 1 = 3/4$ |\n",
-    "| $f_3 \\cdot f_7 = P(S \\mid C=\\text{True}) \\cdot f_7(C=\\text{True}, S)$ | $3/4 \\cdot 1/2 = 3/8$ | $1/4 \\cdot 1 = 1/4$ |\n",
+    "| $f_3 \\cdot f_7 = P(S \\mid C=\\text{False}) \\cdot f_7(C=\\text{False}, S)$ | $\\dfrac{1}{4} \\cdot 0 = 0$ | $\\dfrac{3}{4} \\cdot 1 = \\dfrac{3}{4}$ |\n",
+    "| $f_3 \\cdot f_7 = P(S \\mid C=\\text{True}) \\cdot f_7(C=\\text{True}, S)$ | $\\dfrac{3}{4} \\cdot \\dfrac{1}{2} = \\dfrac{3}{8}$ | $\\dfrac{1}{4} \\cdot 1 = \\dfrac{1}{4}$ |\n",
     "\n",
     "</div>\n",
     "\n",
@@ -310,8 +310,8 @@
     "\n",
     "| | $f_9(C)$ |\n",
     "| --- | --- |\n",
-    "| $f_8(C=\\text{False}, S=\\textbf{False}) + f_8(C=\\text{False}, S=\\textbf{True})$ | $0 + 3/4 = 3/4$ |\n",
-    "| $f_8(C=\\text{True}, S=\\textbf{False}) + f_8(C=\\text{True}, S=\\textbf{True})$ | $3/8 + 1/4 = 5/8$ |\n",
+    "| $f_8(C=\\text{False}, S=\\textbf{False}) + f_8(C=\\text{False}, S=\\textbf{True})$ | $0 + \\dfrac{3}{4} = \\dfrac{3}{4}$ |\n",
+    "| $f_8(C=\\text{True}, S=\\textbf{False}) + f_8(C=\\text{True}, S=\\textbf{True})$ | $\\dfrac{3}{8} + \\dfrac{1}{4} = \\dfrac{5}{8}$ |\n",
     "\n",
     "</div>\n",
     "\n",
@@ -328,14 +328,14 @@
     "\n",
     "| $C$ | False | True |\n",
     "| --- | --- | --- |\n",
-    "| $f_1 \\cdot f_9 = P(C) \\cdot f_9(C)$ | $1/2 \\cdot 3/4 = 3/8$ | $1/2 \\cdot 5/8 = 5/16$ |\n",
+    "| $f_1 \\cdot f_9 = P(C) \\cdot f_9(C)$ | $\\dfrac{1}{2} \\cdot \\dfrac{3}{4} = \\dfrac{3}{8}$ | $\\dfrac{1}{2} \\cdot \\dfrac{5}{8} = \\dfrac{5}{16}$ |\n",
     "\n",
     "</div>\n",
     "\n",
     "### Normalize\n",
     "Finally, to achieve our goal of calculating $P(C \\mid W=\\text{True})$, we normalize the final factor so that it becomes a proper probability distribution.\n",
     "\\begin{align*}\n",
-    "    f_{11}(C) &\\coloneqq P(C \\mid W=\\text{True}) = \\frac{f_{10}(C)}{\\sum_{c \\in \\{\\text{False, True}\\}} f_{10}(C=c)}.\n",
+    "    f_{11}(C) &\\coloneqq P(C \\mid W=\\text{True}) = \\dfrac{f_{10}(C)}{\\sum_{c \\in \\{\\text{False, True}\\}} f_{10}(C=c)}.\n",
     "\\end{align*}\n",
     "\n",
     "After variable elimination, we find the probabilities for $P(C \\mid W=\\text{True})$ as shown in this table.\n",
@@ -343,8 +343,8 @@
     "\n",
     "| | $P(C \\mid W=\\text{True})$ |\n",
     "| --- | --- |\n",
-    "| $f_{10}(C=\\text{False})/(f_{10}(C=\\textbf{False}) + f_{10}(C=\\textbf{True}))$ | $(3/8) / (3/8 + 5/16) = 6/11 $ |\n",
-    "| $f_{10}(C=\\text{True})/(f_{10}(C=\\textbf{False}) + f_{10}(C=\\textbf{True}))$ | $(5/16) / (3/8 + 5/16) = 5/11 $ |\n",
+    "| $\\dfrac{f_{10}(C=\\text{False})}{f_{10}(C=\\textbf{False}) + f_{10}(C=\\textbf{True})}$ | $\\dfrac{3/8}{3/8 + 5/16} = \\dfrac{6}{11}$ |\n",
+    "| $\\dfrac{f_{10}(C=\\text{True})}{f_{10}(C=\\textbf{False}) + f_{10}(C=\\textbf{True})}$ | $\\dfrac{5/16}{3/8 + 5/16} = \\dfrac{5}{11}$ |\n",
     "\n",
     "</div>\n",
     "\n",
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -434,6 +434,65 @@
     "nx.draw(G, pos=positions, with_labels=True, node_size=2000, node_color=\"lightblue\")\n",
     "plt.axis(\"off\")  # Turn off axis labels\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Improvement on Computational Complexity\n",
+    "A naive way of finding marginal probability (for discrete random variables) is\n",
+    "\\begin{align*}\n",
+    "    p(x_1) &= \\sum_{x_2} \\ldots \\sum_{x_{n}} p(x_1, \\ldots, x_n).\n",
+    "\\end{align*}\n",
+    "In this section we will see how variable elimination reduces the computational complexity of marginalization.\n",
+    "\n",
+    "We can first think about the complexity as the number of operations needed to calculate the marginal distribution. Intuitively, this would scale according to the number of possible observed values. To see the time complexity for the brute-force marginalization process, let's assume that each random variable $X_i$ has $D$ possible values. We use $x_i^{[j]}$ to denote the observed value of $X_i = x_i$ that has the $j$-th value: $x_i \\in \\{x_i^{[j]} : j = 1, \\ldots D\\}$.\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    & & p(x_n) &= \\sum_{j_1=1}^D \\ldots \\sum_{j_{n-1}=1}^D p(x_1^{[j_1]}, \\ldots, x_n) \\\\\n",
+    "    \\text{(expand the sum over $x_1$)} & & &= \\underbrace{\\bigg[\\sum_{j_2=1}^{D} \\ldots \\sum_{j_{n-1}=1}^{D} p(x_1^{[1]}, x_2^{[j_2]} \\ldots, x_{n-1}^{[j_{n-1}]}, x_n) \\bigg] + \\ldots + \\bigg[\\sum_{j_2=1}^{D} \\ldots \\sum_{j_{n-1}=1}^{D} p(x_1^{[D]}, x_2^{[j_2]} \\ldots, x_{n-1}^{[j_{n-1}]}, x_n) \\bigg]}_{\\text{sum of $D$ terms}} \\\\\n",
+    "    \\text{(expand the sum over $x_2$)} & & &= \\underbrace{\\bigg[\\sum_{j_3=1}^{D} \\ldots \\sum_{j_{n-1}=1}^{D} p(x_1^{[1]}, x_2^{[1]} \\ldots, x_{n-1}^{[j_{n-1}]}, x_n) \\bigg] + \\ldots + \\bigg[\\sum_{j_3=1}^{D} \\ldots \\sum_{j_{n-1}=1}^{D} p(x_1^{[D]}, x_2^{[D]} \\ldots, x_{n-1}^{[j_{n-1}]}, x_n) \\bigg]}_{\\text{sum of $D^2$ terms}} \\\\\n",
+    "    & & & \\;\\; \\vdots \\\\\n",
+    "    \\text{(expand the sum over $x_{n-2}$)} & & &= \\underbrace{\\bigg[\\sum_{j_{n-1}=1}^{D} p(x_1^{[1]}, x_2^{[1]} \\ldots, x_{n-2}^{[1]}, x_{n-1}^{[j_{n-1}]}, x_n) \\bigg] + \\ldots + \\bigg[\\sum_{j_{n-1}=1}^{D} p(x_1^{[D]}, x_2^{[D]} \\ldots, x_{n-2}^{[D]}, x_{n-1}^{[j_{n-1}]}, x_n) \\bigg]}_{\\text{sum of $D^{n-2}$ terms}} \\\\\n",
+    "    \\text{(expand the sum over $x_{n-1}$)} & & &= \\underbrace{p(x_1^{[1]}, x_2^{[1]} \\ldots, x_{n-1}^{[1]}, x_n)  + \\ldots + p(x_1^{[D]}, x_2^{[D]} \\ldots, x_{n-1}^{[D]}, x_n)}_{\\text{sum of $D^{n-1}$ terms}}\n",
+    "\\end{align*}\n",
+    "\n",
+    "Furthermore, we can view each of the $D^{n-1}$ terms as a single iteration in a `for` loop. Thus it's clear that &mdash; to find the marginal distribution of a single variable among $n$ variables with $D$ possible outcomes &mdash; there is at least $D^{n-1}$ iterations (loops) that we need to run.\n",
+    "\n",
+    "In most cases, we don't know the actual joint probabilities, only in terms of independent (conditional) probabilities. This means that within each iteration, we have additional multiplicative operations that increase the time complexity. Evidently, the brute-force marginalization has poor scalability with an exponential time complexity in number of variables.\n",
+    "\n",
+    "For instance, consider the case from the example above and examine the time complexity required to compute the prior $P(W)$. Using brute-force marginalization, we would compute the joint distribution as\n",
+    "\\begin{align*}\n",
+    "    P(W) &= \\sum_{c, r, s} P(C,R,S,W) \\\\\n",
+    "    &= \\sum_{c} \\sum_{r} \\sum_{s} P(C) P(R=r \\mid C) P(S=r \\mid C) P(W=w \\mid R=r, S=r) \\\\\n",
+    "    &= \\sum_{c} \\sum_{r} \\big[ P(C) P(R \\mid C) P(S=\\text{False} \\mid C) P(W \\mid R, S=\\text{False}) + P(C) P(R \\mid C) P(S=\\text{True} \\mid C) P(W \\mid R, S=\\text{True}) \\big] \\\\\n",
+    "    &= \\sum_{c} \\big[ P(C) P(R=\\text{False} \\mid C) P(S=\\text{False} \\mid C) P(W \\mid R=\\text{False}, S=\\text{False}) \\\\\n",
+    "    & \\qquad \\quad + P(C) P(R=\\text{False} \\mid C) P(S=\\text{True} \\mid C) P(W \\mid R=\\text{False}, S=\\text{True}) \\\\\n",
+    "    & \\qquad \\quad + P(C) P(R=\\text{True} \\mid C) P(S=\\text{False} \\mid C) P(W \\mid R=\\text{True}, S=\\text{False}) \\\\\n",
+    "    & \\qquad \\quad + P(C) P(R=\\text{True} \\mid C) P(S=\\text{True} \\mid C) P(W \\mid R=\\text{True}, S=\\text{True}) \\big] \\\\\n",
+    "    &= P(C=\\text{False}) P(R=\\text{False} \\mid C=\\text{False}) P(S=\\text{False} \\mid C=\\text{False}) P(W \\mid R=\\text{False}, S=\\text{False}) \\\\\n",
+    "    &\\quad + P(C=\\text{False}) P(R=\\text{True} \\mid C=\\text{False}) P(S=\\text{False} \\mid C=\\text{False}) P(W \\mid R=\\text{True}, S=\\text{False}) \\\\\n",
+    "    &\\quad + P(C=\\text{False}) P(R=\\text{False} \\mid C=\\text{False}) P(S=\\text{False} \\mid C=\\text{False}) P(W \\mid R=\\text{False}, S=\\text{False}) \\\\\n",
+    "    &\\quad + P(C=\\text{False}) P(R=\\text{True} \\mid C=\\text{False}) P(S=\\text{False} \\mid C=\\text{False}) P(W \\mid R=\\text{True}, S=\\text{False}) \\\\\n",
+    "    &\\quad + P(C=\\text{True}) P(R=\\text{False} \\mid C=\\text{True}) P(S=\\text{True} \\mid C=\\text{True}) P(W \\mid R=\\text{False}, S=\\text{True}) \\\\\n",
+    "    &\\quad + P(C=\\text{True}) P(R=\\text{True} \\mid C=\\text{True}) P(S=\\text{True} \\mid C=\\text{True}) P(W \\mid R=\\text{True}, S=\\text{True}) \\\\\n",
+    "    &\\quad + P(C=\\text{True}) P(R=\\text{False} \\mid C=\\text{True}) P(S=\\text{True} \\mid C=\\text{True}) P(W \\mid R=\\text{False}, S=\\text{True}) \\\\\n",
+    "    &\\quad + P(C=\\text{True}) P(R=\\text{True} \\mid C=\\text{True}) P(S=\\text{True} \\mid C=\\text{True}) P(W \\mid R=\\text{True}, S=\\text{True})\n",
+    "\\end{align*}\n",
+    "which has 4 multiplicative operations repeated 8 times (possible combinations of the random variables), _i.e._, there are 8 loops in which 4 multiplicative operations are executed. After including the 7 additive operations to add the 8 values, this brings the total number of operations to be $8(4) + 7 = 39$ (_we neglect the operations needed to define, store and look up values for now_). As you can see, some of these operations can be prevented entirely by storing and reusing the sums/products, which is exemplified by the variable elimination method.\n",
+    "\\begin{align*}\n",
+    "    P(W) &= \\sum_{c,r,s} P(C,R,S,W) \\\\\n",
+    "    &= \\sum_{c} P(C=c) \\sum_{r} P(R=r \\mid C=c) \\sum_{s} P(S=s \\mid C=c) P(W\\mid R=r, S=s) \\\\\n",
+    "    &= \\sum_{c} P(C=c) \\sum_{r} P(R=r \\mid C=c) \\underbrace{\\bigg[P(S=\\text{False} \\mid C=c) P(W \\mid R=r, S=\\text{False}) + P(S=\\text{False} \\mid C=c) P(W \\mid R=r, S=\\text{True}) \\bigg]}_{\\text{2 iterations $\\times$ 1 multiplication + 1 addition = 3 operations}} \\\\\n",
+    "    &= \\sum_{c} P(C=c) \\sum_{r} P(R=r \\mid C=c) f_S(R=r, C=c, W) \\\\\n",
+    "    &= \\sum_{c} P(C=c) \\underbrace{\\bigg[P(R=\\text{False} \\mid C=c) f_S(R=\\text{False}, C=c, W) + P(R=\\text{True} \\mid C=c) f_S(R=\\text{True}, C=c, W) \\bigg]}_{\\text{2 iterations $\\times$ (1 multiplication + 3 operations) $+$ 1 addition = 9 operations}} \\\\\n",
+    "    &= \\sum_{c} P(C=c) f_R(C=c, W) \\\\\n",
+    "    &= \\sum_{c} \\underbrace{\\bigg[ P(C=\\text{False}) f_R(C=\\text{False}, W) + P(C=\\text{True}) f_R(C=\\text{True}, W) \\bigg]}_{\\text{2 iterations $\\times$ (1 multiplication + 9 operations) + 1 addition = 21 operations}} \\\\\n",
+    "    &= f_C(W)\n",
+    "\\end{align*}\n",
+    "\n",
+    "Through variable elimination, we were able to reduce our marginalization to 21 operations."
    ]
   }
  ],
