Minor revision to variable elimination notebook.

--- a/stats/variable_elimination_example.ipynb
+++ b/stats/variable_elimination_example.ipynb
@@ -210,8 +210,9 @@
     "\\begin{align*}\n",
     "    P(C \\mid W=\\text{True}) &= \\frac{P(C, W=\\text{True})}{\\sum_{c \\in \\{\\text{False, True}\\}} P(C=c, W=\\text{True})} \\\\\n",
     "    &= \\frac{f_{10}(C)}{\\sum_{c \\in \\{\\text{False, True}\\}} f_{10}(C=c)} \\\\\n",
-    "    &\\eqqcolon f_{11}(C).\n",
-    "\\end{align*}"
+    "    &\\eqqcolon f_{11}(C)\n",
+    "\\end{align*}\n",
+    "which marks the end of the algorithm."
    ]
   },
   {
@@ -447,7 +448,7 @@
     "\\end{align*}\n",
     "In this section we will see how variable elimination reduces the computational complexity of marginalization.\n",
     "\n",
-    "We can first think about the complexity as the number of operations needed to calculate the marginal distribution. Intuitively, this would scale according to the number of possible observed values. To see the time complexity for the brute-force marginalization process, let's assume that each random variable $X_i$ has $D$ possible values. We use $x_i^{[j]}$ to denote the observed value of $X_i = x_i$ that has the $j$-th value: $x_i \\in \\{x_i^{[j]} : j = 1, \\ldots D\\}$.\n",
+    "We can first think about the complexity as the number of possible observed values needed to go over in calculating the marginal distribution. Intuitively, this would scale according to the number of random variables you want to marginalize out. To see the time complexity for the brute-force marginalization process, let's assume that each random variable $X_i$ has $D$ possible values. We use $x_i^{[j]}$ to denote the observed value of $X_i = x_i$ that has the $j$-th value: $x_i \\in \\{x_i^{[j]} : j = 1, \\ldots D\\}$.\n",
     "\n",
     "\\begin{align*}\n",
     "    & & p(x_n) &= \\sum_{j_1=1}^D \\ldots \\sum_{j_{n-1}=1}^D p(x_1^{[j_1]}, \\ldots, x_n) \\\\\n",
@@ -458,11 +459,11 @@
     "    \\text{(expand the sum over $x_{n-1}$)} & & &= \\underbrace{p(x_1^{[1]}, x_2^{[1]} \\ldots, x_{n-1}^{[1]}, x_n)  + \\ldots + p(x_1^{[D]}, x_2^{[D]} \\ldots, x_{n-1}^{[D]}, x_n)}_{\\text{sum of $D^{n-1}$ terms}}\n",
     "\\end{align*}\n",
     "\n",
-    "Furthermore, we can view each of the $D^{n-1}$ terms as a single iteration in a `for` loop. Thus it's clear that &mdash; to find the marginal distribution of a single variable among $n$ variables with $D$ possible outcomes &mdash; there is at least $D^{n-1}$ iterations (loops) that we need to run.\n",
+    "Furthermore, we can view each of the $D^{n-1}$ terms as a single iteration in a `for` loop. Thus it's clear that &mdash; to find the marginal distribution of a single variable among $n$ variables with $D$ possible outcomes &mdash; there are at least $D^{n-1}$ iterations (loops) that we need to run.\n",
     "\n",
-    "In most cases, we don't know the actual joint probabilities, only in terms of independent (conditional) probabilities. This means that within each iteration, we have additional multiplicative operations that increase the time complexity. Evidently, the brute-force marginalization has poor scalability with an exponential time complexity in number of variables.\n",
+    "Evidently, brute-force marginalization has poor scalability with an exponential time complexity in number of variables, although the difference is less notable when you only have a few variables. Despite this, we can still see the reduction in complexity by comparing the _number of operations_ between the two methods.\n",
     "\n",
-    "For instance, consider the case from the example above and examine the time complexity required to compute the prior $P(W)$. Using brute-force marginalization, we would compute the joint distribution as\n",
+    "For instance, consider the problem from before; say we want to compute the prior $P(W)$, _i.e._, how likely is the grass going to be wet? Using brute-force marginalization, we would compute the prior distribution as\n",
     "\\begin{align*}\n",
     "    P(W) &= \\sum_{c, r, s} P(C,R,S,W) \\\\\n",
     "    &= \\sum_{c} \\sum_{r} \\sum_{s} P(C) P(R=r \\mid C) P(S=r \\mid C) P(W=w \\mid R=r, S=r) \\\\\n",
@@ -480,7 +481,7 @@
     "    &\\quad + P(C=\\text{True}) P(R=\\text{False} \\mid C=\\text{True}) P(S=\\text{True} \\mid C=\\text{True}) P(W \\mid R=\\text{False}, S=\\text{True}) \\\\\n",
     "    &\\quad + P(C=\\text{True}) P(R=\\text{True} \\mid C=\\text{True}) P(S=\\text{True} \\mid C=\\text{True}) P(W \\mid R=\\text{True}, S=\\text{True})\n",
     "\\end{align*}\n",
-    "which has 4 multiplicative operations repeated 8 times (possible combinations of the random variables), _i.e._, there are 8 loops in which 4 multiplicative operations are executed. After including the 7 additive operations to add the 8 values, this brings the total number of operations to be $8(4) + 7 = 39$ (_we neglect the operations needed to define, store and look up values for now_). As you can see, some of these operations can be prevented entirely by storing and reusing the sums/products, which is exemplified by the variable elimination method.\n",
+    "which has 4 multiplicative operations repeated 8 times (possible combinations of the random variables), _i.e._, there are 8 loops in which 4 multiplicative operations are executed. After including the 7 additive operations to add the 8 values, this brings the total number of operations to be 8(4) + 7 = 39 (_we neglect the operations needed to define, store and look up values for now_). As you can see, some of these operations can be prevented entirely by storing and reusing the sums/products, which is exemplified by the variable elimination method.\n",
     "\\begin{align*}\n",
     "    P(W) &= \\sum_{c,r,s} P(C,R,S,W) \\\\\n",
     "    &= \\sum_{c} P(C=c) \\sum_{r} P(R=r \\mid C=c) \\sum_{s} P(S=s \\mid C=c) P(W\\mid R=r, S=s) \\\\\n",
@@ -492,7 +493,7 @@
     "    &= f_C(W)\n",
     "\\end{align*}\n",
     "\n",
-    "Through variable elimination, we were able to reduce our marginalization to 21 operations."
+    "Through variable elimination, we were able to reduce our marginalization to 21 operations &mdash; an improvement, albeit a small one. In both cases the most expensive computation is $\\mathcal{O}(2^3)$, because a sum ('loop') over 3 variables exist (appears as the sum over $s$ that becomes $f_S(R,C,W)$ in the variable elimination case). Therefore, we consider them to have the same time complexity (in terms of order of magnitude), but it should be clear that the improvement by using variable elimination grows with the number of variables."
    ]
   }
  ],
