Added belief propagation notebook and minor update to variable elimination notebook.

--- a/stats/variable_elimination_example.ipynb
+++ b/stats/variable_elimination_example.ipynb
@@ -25,7 +25,7 @@
     "In brief, variable elimination consists of the following steps:\n",
     "1. **Defining factors**: a factor is an abstract concept that can represent a joint or conditional probability; it is a function that maps random variables into some likelihood.\n",
     "2. **Apply evidence**: based on the evidence (formally introduced later), we can assign the observed value(s) to the factors with corresponding variables.\n",
-    "4. **Collect Marginalize hidden variables**: based on our query (formally introduced later), we can marginalize out the hidden variables (that are not part of the query) out of the joint distribution.\n",
+    "4. **Collect and marginalize hidden variables**: based on our query (formally introduced later), we can marginalize out the hidden variables (that are not part of the query) out of the joint distribution.\n",
     "3. **Multiply factors**: combine the remaining query variable factors through element-wise (variable-wise) multiplication.\n",
     "5. **Normalize**: to obtain a proper probability distribution.\n",
     "\n",
@@ -83,7 +83,7 @@
     "nx.draw(G, pos=positions, with_labels=True, node_size=2000, node_color=\"lightblue\")\n",
     "nx.draw_networkx_labels(G, shifted_pos, labels=desc, horizontalalignment=\"center\")\n",
     "\n",
-    "# ddjust frame to avoid cutting text, may need to adjust the value\n",
+    "# Adjust frame to avoid cutting text\n",
     "axis = plt.gca()\n",
     "axis.set_xlim([1.2*x for x in axis.get_xlim()])\n",
     "axis.set_ylim([1.2*y for y in axis.get_ylim()])\n",
@@ -164,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Solution Sketch\n",
+    "## Solution sketch\n",
     "From the Bayesian network, we can decompose the joint distribution into separable (conditional) probabilities\n",
     "\\begin{align*}\n",
     "    P(C,R,S,W) &= P(C) P(R \\mid C) P(S \\mid C) P(W \\mid R, S).\n",
@@ -227,7 +227,7 @@
     "    }\n",
     "</style>\n",
     "\n",
-    "## Detailed Solution\n",
+    "## Detailed solution\n",
     "### Defining factors\n",
     "We need to define a factor for every variable/node in the Bayesian network. Based on the given probability tables, we can define our factors as follows\n",
     "\\begin{align*}\n",
@@ -257,7 +257,7 @@
     "\n",
     "</div>\n",
     "\n",
-    "### Collect and Marginalize hidden variables\n",
+    "### Collect and marginalize hidden variables\n",
     "Since we only care about the query variable $C$, factors with the hidden variables $R, S$ will be marginalized out from the existing factors to give us new factors.\n",
     "\n",
     "We start by marginalizing the hidden variable $R$, which involves grouping the factors together first before summing them\n",
@@ -441,7 +441,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Improvement on Computational Complexity\n",
+    "## Improvement on computational complexity\n",
     "A naive way of finding marginal probability (for discrete random variables) is\n",
     "\\begin{align*}\n",
     "    p(x_1) &= \\sum_{x_2} \\ldots \\sum_{x_{n}} p(x_1, \\ldots, x_n).\n",
@@ -461,7 +461,7 @@
     "\n",
     "Furthermore, we can view each of the $D^{n-1}$ terms as a single iteration in a `for` loop. Thus it's clear that &mdash; to find the marginal distribution of a single variable among $n$ variables with $D$ possible outcomes &mdash; there are at least $D^{n-1}$ iterations (loops) that we need to run.\n",
     "\n",
-    "Evidently, brute-force marginalization has poor scalability with an exponential time complexity in number of variables, although the difference is less notable when you only have a few variables. Despite this, we can still see the reduction in complexity by comparing the _number of operations_ between the two methods.\n",
+    "Evidently, brute-force marginalization has poor scalability with an exponential time complexity in number of variables, although the improvement from using variable elimination is less notable when you only have a few variables. Despite this, we can still see the reduction in complexity by comparing the _number of operations_ between the two methods.\n",
     "\n",
     "For instance, consider the problem from before; say we want to compute the prior $P(W)$, _i.e._, how likely is the grass going to be wet? Using brute-force marginalization, we would compute the prior distribution as\n",
     "\\begin{align*}\n",
